--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,14 +12,14 @@ html
     nav.navbar.navbar-default
       .container-fluid
         .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#irwatcher-navbar', aria-expanded='false')
+          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#application-navbar', aria-expanded='false')
             span.sr-only Toggle navigation
             span.icon-bar
             span.icon-bar
             span.icon-bar
            a.navbar-brand(title='#{context.appConstants.APP_NAME} - v#{context.version}') #{context.appConstants.APP_NAME}
         // Collect the nav links, forms, and other content for toggling
-        #irwatcher-navbar.collapse.navbar-collapse
+        #application-navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
                 a(href='/')
