Added meta and robots.txt

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,10 @@ html
   head
     title=context.viewHelpers.buildTitle(title)
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
+    meta(name='application-name', content='CEWatcher')
+    meta(name='author', content='retroburst (Andrew D)')
+    meta(name='description', content='Watches exchange rates for currencies of interest, stores changes over time and notifies changes via email.')
+    meta(name='keywords', content='currency,exchange,rates,watch,watcher')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap.cyborg.min.css')
     script(src='/jquery/jquery.min.js')
